# automation-auditor

./: .env.example  .gitignore  README.md  pyproject.toml
audit/report_bypeer_received/: report-received-bypeer.md
audit/report_onpeer_generated/: report-onpeer-generated.md
audit/report_onself_generated/: self_audit.md
reports/: final_report.md  interim_report.md
src/: __init__.py  graph.py  state.py
src/nodes/: __init__.py  detectives.py  judges.py  justice.py
src/tools/: __init__.py  doc_tools.py  repo_tools.py  vision_tools.py
