[project]
name = "automaton-auditor"
version = "0.1.0"
description = "A hierarchical LangGraph agent swarm for autonomous code governance — the Digital Courtroom"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["langgraph", "multi-agent", "code-audit", "governance", "llm", "pydantic"]

dependencies = [
    # ── Core graph framework ──────────────────────────────────────────────
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",

    # ── LLM provider ─────────────────────────────────────────────────────
    "langchain-google-genai>=2.0.0",

    # ── Data validation ───────────────────────────────────────────────────
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # ── Document parsing (DocAnalyst / VisionInspector) ───────────────────
    "docling>=2.5.0",

    # ── Observability ─────────────────────────────────────────────────────
    "langsmith>=0.1.0",

    # ── Environment & utilities ───────────────────────────────────────────
    "python-dotenv>=1.0.0",

    # ── Git operations (sandboxed repo cloning) ───────────────────────────
    "gitpython>=3.1.40",

    # ── HTTP (gitingest API or direct downloads) ──────────────────────────
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
# Entry-point for running the auditor from the CLI
automaton-auditor = "automaton_auditor.cli:main"

# ---------------------------------------------------------------------------
# Build system
# ---------------------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# uv — package manager configuration
# ---------------------------------------------------------------------------

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501", # line length is handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "langchain_google_genai.*",
    "langsmith.*",
    "docling.*",
    "git.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
